# swebench-agent

./: .gitignore  README.md  basic_agent.py  cheat_run.json  create_docker_container.py  dataset.py  eval.py  gold.my_run_001.json  langgraph_agent.py  main.py  predictions.json  predictions2.json  pyproject.toml  rag_agent.py  utils.py
runs/: best_run.json  gpt-4o.my_run_001.json
